--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>GameOn</title>
+    <link icon="RutviClothing.png">
+    <title>Rutvi Clothing</title>
   </head>
   <body>
     <div id="root"></div>
-     
+
 </body>
 </html>
